@@ -1,3 +1,13 @@
+2010-05-26  Xan Lopez  <xlopez@igalia.com>
+
+        Unreviewed GTK+ build fix.
+
+        Use G_DEFINE_INTERFACE only if it's available.
+
+        * bindings/gobject/WebKitDOMEventTarget.cpp:
+        (webkit_dom_event_target_get_type):
+        (webkit_dom_event_target_default_init):
+
 2010-05-26  Jeremy Orlow  <jorlow@chromium.org>
 
         Reviewed by Darin Fisher.
